{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 11,
  "lineage": "bde941d0-cc47-a326-f0eb-cbfec49c0779",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nginx-app-firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "allow.#": "1",
            "allow.272637744.ports.#": "1",
            "allow.272637744.ports.0": "80",
            "allow.272637744.protocol": "tcp",
            "creation_timestamp": "2019-07-03T03:24:30.506-07:00",
            "deny.#": "0",
            "description": "",
            "destination_ranges.#": "0",
            "direction": "INGRESS",
            "disabled": "false",
            "id": "nginx-app-firewall",
            "name": "nginx-app-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
            "priority": "1000",
            "project": "terraform-testing-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/firewalls/nginx-app-firewall",
            "source_ranges.#": "1",
            "source_ranges.1080289494": "0.0.0.0/0",
            "source_service_accounts.#": "0",
            "source_tags.#": "0",
            "target_service_accounts.#": "0",
            "target_tags.#": "1",
            "target_tags.2541227442": "http"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraform-default-ssh-firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes_flat": {
            "allow.#": "1",
            "allow.803338340.ports.#": "1",
            "allow.803338340.ports.0": "22",
            "allow.803338340.protocol": "tcp",
            "creation_timestamp": "2019-07-03T03:19:32.804-07:00",
            "deny.#": "0",
            "description": "",
            "destination_ranges.#": "0",
            "direction": "INGRESS",
            "disabled": "false",
            "id": "terraform-default-ssh-firewall",
            "name": "terraform-default-ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
            "priority": "1000",
            "project": "terraform-testing-1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/firewalls/terraform-default-ssh-firewall",
            "source_ranges.#": "1",
            "source_ranges.1080289494": "0.0.0.0/0",
            "source_service_accounts.#": "0",
            "source_tags.#": "0",
            "target_service_accounts.#": "0",
            "target_tags.#": "1",
            "target_tags.4002270276": "ssh"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes_flat": {
            "attached_disk.#": "0",
            "boot_disk.#": "1",
            "boot_disk.0.auto_delete": "true",
            "boot_disk.0.device_name": "persistent-disk-0",
            "boot_disk.0.disk_encryption_key_raw": "",
            "boot_disk.0.disk_encryption_key_sha256": "",
            "boot_disk.0.initialize_params.#": "1",
            "boot_disk.0.initialize_params.0.image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20190618",
            "boot_disk.0.initialize_params.0.size": "10",
            "boot_disk.0.initialize_params.0.type": "pd-standard",
            "boot_disk.0.kms_key_self_link": "",
            "boot_disk.0.source": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/zones/us-central1-c/disks/terraform-instance",
            "can_ip_forward": "false",
            "cpu_platform": "Intel Haswell",
            "deletion_protection": "false",
            "guest_accelerator.#": "0",
            "id": "terraform-instance",
            "instance_id": "256442139992473562",
            "label_fingerprint": "42WmSpB8rSM=",
            "labels.%": "0",
            "machine_type": "f1-micro",
            "metadata.%": "0",
            "metadata_fingerprint": "v_lkU1zCaUs=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install nginx -y;",
            "name": "terraform-instance",
            "network_interface.#": "1",
            "network_interface.0.access_config.#": "1",
            "network_interface.0.access_config.0.assigned_nat_ip": "",
            "network_interface.0.access_config.0.nat_ip": "35.232.136.13",
            "network_interface.0.access_config.0.network_tier": "PREMIUM",
            "network_interface.0.access_config.0.public_ptr_domain_name": "",
            "network_interface.0.address": "",
            "network_interface.0.alias_ip_range.#": "0",
            "network_interface.0.name": "nic0",
            "network_interface.0.network": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network",
            "network_interface.0.network_ip": "10.128.0.3",
            "network_interface.0.subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/regions/us-central1/subnetworks/terraform-network",
            "network_interface.0.subnetwork_project": "terraform-testing-1",
            "project": "terraform-testing-1",
            "scheduling.#": "1",
            "scheduling.0.automatic_restart": "true",
            "scheduling.0.node_affinities.#": "0",
            "scheduling.0.on_host_maintenance": "MIGRATE",
            "scheduling.0.preemptible": "false",
            "scratch_disk.#": "0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/zones/us-central1-c/instances/terraform-instance",
            "service_account.#": "0",
            "shielded_instance_config.#": "0",
            "tags.#": "2",
            "tags.2541227442": "http",
            "tags.4002270276": "ssh",
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "depends_on": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "auto_create_subnetworks": "true",
            "delete_default_routes_on_create": "false",
            "id": "terraform-network",
            "name": "terraform-network",
            "project": "terraform-testing-1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-testing-1/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}